# libwaybar_cffi_lyrics

./: .gitignore  Makefile  README.md  build.sh  meson.build
include/: common.h  utils.hpp  way_lyrics.h
src/: player_manager.cpp  way_lyrics.cpp  waybar_cffi_lyrics.cpp
